# wire-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo-audit.jsonl  demo.sh  pyproject.toml  wire-cost-audit.jsonl  wire-demo.cast
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench_audit_chain.py  bench_idempotency.py  bench_loop_guard.py  bench_sla_tracker.py  results.json  run_all.py
docs/: 404.html  index.html
examples/: README.md  sprint1_langgraph.py
examples/aws-cost-governance/: README.md  agent.py  mock_aws.py  requirements.txt  run.py  tools.py  wire-cost-audit.jsonl
examples/customer_support/: run.py
examples/data_pipeline/: run.py
examples/incident_response/: run.py
examples/react_agent/: README.md  run.py
scripts/: bump-version.sh  install-hooks.sh  pre-push.hook  release.sh
src/wire/: __init__.py  auto.py  cli.py  deploy.py  hire_api.py
src/wire/adapters/: __init__.py  autogen.py  crewai.py  foundry.py  langgraph.py  openai.py
src/wire/channels/: __init__.py  slack.py
src/wire/core/: audit.py  budget.py  durable_events.py  errors.py  events.py  guard.py  hitl.py  idempotency.py  idempotency_backends.py  models.py  policy.py  sla.py  stream.py
src/wire/enterprise/: __init__.py  backends.py  blueprints.py  compliance.py  multitenancy.py  rbac.py
src/wire/hire/: __init__.py  parser.py  semantic.py  templates.py  workforce.py
src/wire/integrations/: __init__.py  langchain.py  llama_index.py  tool_registry.py
src/wire/middleware/: __init__.py  autopatch.py
src/wire/observability/: __init__.py  event_store.py  metrics.py
src/wire/plugins/: __init__.py  agentlens_plugin.py  tokmon_plugin.py
src/wire/visibility/: __init__.py  dashboard.py  drift.py  ledger.py  replay.py  web_dashboard.py
tests/: conftest.py  test_adapters.py  test_audit_chain.py  test_blueprints.py  test_budget.py  test_enterprise.py  test_foundry_adapter.py  test_hire.py  test_idempotency.py  test_idempotency_backends.py  test_loop_guard.py  test_plugins.py  test_policy.py  test_semantic_hire.py  test_sla.py  test_slack_hitl.py  test_sprint10_autopatch.py  test_sprint7_streaming.py  test_sprint8_integrations.py  test_sprint9_observability.py  test_visibility.py  test_web_dashboard.py
